--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,12 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.14.RELEASE'
     id 'java'
     id "com.adarshr.test-logger" version "3.2.0"
+    id "io.freefair.lombok" version "6.5.1"
 }
 
 group = 'br.uff'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
